s3cmd 0.9.3   -   2007-05-26
===========
* New command "du" for displaying size of your data in S3.
  (Basil Shubin)

s3cmd 0.9.2   -   2007-04-09
===========
* Lots of new documentation
* Allow "get" to stdout (use "-" in place of destination file
  to get the file contents on stdout)
* Better compatibility with Python 2.4
* Output public HTTP URL for objects stored with Public ACL
* Various bugfixes and improvements

s3cmd 0.9.1   -   2007-02-06
===========
* All commands now use S3-URIs
* Removed hard dependency on Python 2.5
* Experimental support for Python 2.4 
  (requires external ElementTree module)


s3cmd 0.9.0   -   2007-01-18
===========
* First public release brings support for all basic Amazon S3
  operations: Creation and Removal of buckets, Upload (put),
  Download (get) and Removal (del) of files/objects.
