@@ -34,16 +34,32 @@ your S3 account.
 
 Pricing explained
 -----------------
-At the time of this writing the costs of using S3 are:
-1) US$0.15 per GB-Month of storage used.
-2) US$0.20 per GB of data transferred.
+At the time of this writing the costs of using S3 are (in USD):
+
+$0.15 per GB per month of storage space used
+
+plus
+
+$0.10 per GB - all data uploaded
+
+plus
+
+$0.18 per GB - first 10 TB / month data downloaded
+$0.16 per GB - next 40 TB / month data downloaded
+$0.13 per GB - data downloaded / month over 50 TB
+
+plus
+
+$0.01 per 1,000 PUT or LIST requests
+$0.01 per 10,000 GET and all other requests
 
 If for instance on 1st of January you upload 2GB of 
 photos in JPEG from your holiday in New Zealand, at the 
 end of January you will be charged $0.30 for using 2GB of
-storage space for a month and $0.40 for transferring 2GB
-of data. That comes to $0.70 for a complete backup of your 
-precious holiday pictures. 
+storage space for a month, $0.20 for uploading 2GB
+of data, and a few cents for requests. 
+That comes to slightly over $0.50 for a complete backup 
+of your precious holiday pictures.
 
 In February you don't touch it. Your data are still on S3 
 servers so you pay $0.30 for those two gigabytes, but not
@@ -54,7 +70,7 @@ In March you allow anonymous read access to some of your
 pictures and your friends download, say, 500MB of them. 
 As the files are owned by you, you are responsible for the 
 costs incurred. That means at the end of March you'll be 
-charged $0.30 for storage plus $0.07 for the traffic 
+charged $0.30 for storage plus $0.09 for the download traffic 
 generated by your friends.
 
 There is no minimum monthly contract or a setup fee. What 
