@@ -3,8 +3,3 @@ formats = gztar,zip
 
 [install]
 prefix = /usr
-
-[bdist_rpm]
-requires = python = 2.5
-group = Productivity/Archiving
-doc-files = README, INSTALL, NEWS
